# pyratelimit

./: README.md  example.py  pyproject.toml
.github/: renovate.json
.github/workflows/: ci.yaml
pyratelimit/: __init__.py  token_bucket.py
pyratelimit/aio/: __init__.py  token_bucket.py
script/: scripts.py
